--- a/SwarmNet/PolynomialSwarm/PolynomialSwarm.csproj
+++ b/SwarmNet/PolynomialSwarm/PolynomialSwarm.csproj
@@ -4,15 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BC44157C-9BC9-4E48-BDC4-B719E8EDF9BE}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{A7AFE2CD-C6D9-4CEE-A16D-20A79DAC0386}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SwarmNet</RootNamespace>
-    <AssemblyName>SwarmNet</AssemblyName>
+    <RootNamespace>PolynomialSwarm</RootNamespace>
+    <AssemblyName>PolynomialSwarm</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +24,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -40,18 +43,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Agent.cs" />
-    <Compile Include="ModelSet\Junction.cs" />
-    <Compile Include="ModelSet\SetPiece.cs" />
-    <Compile Include="ModelSet\ModelBranchNode.cs" />
-    <Compile Include="ModelSet\ModelHeadNode.cs" />
-    <Compile Include="ModelSet\ModelLeafNode.cs" />
-    <Compile Include="ModelSet\ModelNode.cs" />
-    <Compile Include="RigSet\RigGraph.cs" />
-    <Compile Include="RigSet\RigNode.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ModelSet\Spawner.cs" />
-    <Compile Include="ModelSet\Terminal.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SwarmNet\SwarmNet.csproj">
+      <Project>{bc44157c-9bc9-4e48-bdc4-b719e8edf9be}</Project>
+      <Name>SwarmNet</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
