--- a/SwarmNet/PolynomialSwarm/PolynomialSwarm.csproj
+++ b/SwarmNet/PolynomialSwarm/PolynomialSwarm.csproj
@@ -43,8 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FuncGen.cs" />
+    <Compile Include="PolyNum.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Transformer.cs" />
+    <Compile Include="TurnStyle.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
