--- a/PolyE/PolyE/PolyE.csproj
+++ b/PolyE/PolyE/PolyE.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A7AFE2CD-C6D9-4CEE-A16D-20A79DAC0386}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{33B3F38F-B0A6-407F-8C9F-1A04D28C3AE6}</ProjectGuid>
+    <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PolynomialSwarm</RootNamespace>
-    <AssemblyName>PolynomialSwarm</AssemblyName>
+    <RootNamespace>PolyE</RootNamespace>
+    <AssemblyName>PolyE</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -39,22 +39,54 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Deployment" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FuncGen.cs" />
-    <Compile Include="PolyNum.cs" />
+    <Compile Include="AppWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AppWindow.Designer.cs">
+      <DependentUpon>AppWindow.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Transformer.cs" />
-    <Compile Include="TurnStyle.cs" />
+    <Compile Include="SwarmNet\Expression.cs" />
+    <Compile Include="SwarmNet\ExprGenerator.cs" />
+    <Compile Include="SwarmNet\Modification.cs" />
+    <Compile Include="SwarmNet\Conditional.cs" />
+    <Compile Include="SwarmNet\PolyEModel.cs" />
+    <EmbeddedResource Include="AppWindow.resx">
+      <DependentUpon>AppWindow.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
+    </Compile>
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Settings.settings</DependentUpon>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\SwarmNet\SwarmNet.csproj">
+    <ProjectReference Include="..\..\SwarmNet\SwarmNet\SwarmNet.csproj">
       <Project>{bc44157c-9bc9-4e48-bdc4-b719e8edf9be}</Project>
       <Name>SwarmNet</Name>
     </ProjectReference>
