--- a/SwarmNet/SwarmNet/SwarmNet.csproj
+++ b/SwarmNet/SwarmNet/SwarmNet.csproj
@@ -50,7 +50,7 @@
     <Compile Include="ModelSet\LeafNode.cs" />
     <Compile Include="ModelSet\GraphNode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ModelSet\Spawner.cs" />
+    <Compile Include="ModelSet\Portal.cs" />
     <Compile Include="ModelSet\Terminal.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
