--- a/SwarmNet/SwarmNet/SwarmNet.csproj
+++ b/SwarmNet/SwarmNet/SwarmNet.csproj
@@ -32,6 +32,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -46,12 +47,15 @@
     <Compile Include="ModelSet\ModelGraph.cs" />
     <Compile Include="ModelSet\SetPiece.cs" />
     <Compile Include="ModelSet\BranchNode.cs" />
-    <Compile Include="ModelSet\HeadNode.cs" />
+    <Compile Include="ModelSet\RootNode.cs" />
     <Compile Include="ModelSet\LeafNode.cs" />
     <Compile Include="ModelSet\GraphNode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ModelSet\Portal.cs" />
     <Compile Include="ModelSet\Terminal.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
