Altered the base library to better reflect the desired product. Began writing documentation. Added system of equations solver.

--- a/SwarmNet/SwarmNet/SwarmNet.csproj
+++ b/SwarmNet/SwarmNet/SwarmNet.csproj
@@ -51,11 +51,11 @@
     <Compile Include="ModelSet\LeafNode.cs" />
     <Compile Include="ModelSet\GraphNode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ModelSet\Portal.cs" />
+    <Compile Include="ModelSet\Port.cs" />
     <Compile Include="ModelSet\Terminal.cs" />
   </ItemGroup>
   <ItemGroup>
-    <WCFMetadata Include="Service References\" />
+    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
