--- a/EquationSolver/EquationSolver/EquationSolver.csproj
+++ b/EquationSolver/EquationSolver/EquationSolver.csproj
@@ -54,13 +54,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SwarmNet\CoefficientSet.cs" />
+    <Compile Include="SwarmNet\ProblemColumn.cs" />
     <Compile Include="SwarmNet\EquationSystem.cs" />
     <Compile Include="SwarmNet\Gate.cs" />
-    <Compile Include="SwarmNet\JuncMessage.cs" />
-    <Compile Include="SwarmNet\VariableAdjuster.cs" />
+    <Compile Include="SwarmNet\RowAdjuster.cs" />
     <Compile Include="SwarmNet\RowMaker.cs" />
-    <Compile Include="SwarmNet\VariableSet.cs" />
+    <Compile Include="SwarmNet\SolutionRow.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
